kubernetes/product-ingress-ngnix/product-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /product-frontend-svc/products
        backend:
          serviceName: product-frontend-cluster-ip-svc
          servicePort: 8080
      - path: /product-orch-svc/products
        backend:
          serviceName: product-orch-cluster-ip-svc
          servicePort: 8080
